--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         $(".lg").click(function(){
             s.push(a,b);
         
-    })
-    })
+    });
+    });
+    console.log(s)
     
 </script>
